--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+
+    <h1>Etch-a-Sketch</h1>
+
+    <button class="size">Grid size</button>
+
     <div class="container"></div>
     <script src="./javascript/script.js"></script>
 </body>
