Add reset button and changed to rainbow colors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <h1>Etch-a-Sketch</h1>
 
-    <button class="size">Grid size</button>
+    <div class="buttons"><button class="size">Grid size</button>
+        <button class="reset">Reset</button>
+    </div>
+
 
     <div class="container"></div>
     <script src="./javascript/script.js"></script>
