implement toggle options for border and rainbow mode

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
     <h1>Etch-a-Sketch</h1>
 
-    <div class="buttons"><button class="size">Grid size</button>
+    <div class="buttons">
+        <button class="size">Grid size</button>
         <button class="reset">Reset</button>
+        <button class="border">Toggle border</button>
+        <button class="rainbow">Rainbow</button>
     </div>
 
 
